--- a/styles/styles.css
+++ b/styles/styles.css
@@ -63,14 +63,6 @@ header{
 
 main{
     grid-area: 2/1/3/10;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    align-content: center;
-    background-color: #f2c47f;
-    height: 100%;
-    flex-wrap: wrap;
 }
 
 .about{
@@ -82,20 +74,52 @@ main{
     align-items: flex-start;
     justify-content: center;
     align-content: center;
+    z-index: 1;
+    position: relative;
 }
 
-
-
-.imgContainer img{
-    max-width: 300px;
-    min-width: 200px;
-    min-height: 200px;
-    object-fit: cover;
+.about h1{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+    font-style: bold;
+    color:#e89038;
+    text-align: center;
 }
+
+.about p{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 25px;
+    font-weight: normal;
+    font-style: normal;
+    color:#fcf0d8;
+    text-align: center;
+}
+
+.about::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background:url(../data/img/childrenImg/1713126252627.jpg) fixed;
+    background-size: contain;
+    z-index: -10;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    text-align: center;
+    filter: blur(3px) grayscale(60%);
+}
+
 
 .textAbout{
-    width: 50%;
+    position: relative;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4)
+
 }
+
 
 .horizontalContainer{
     display: flex;
@@ -104,6 +128,7 @@ main{
     align-content: center;
     align-items: center;
     flex-wrap: wrap;
+
 }
 
 .horizontalList{
@@ -120,7 +145,6 @@ main{
 .horizontalList li{
     display: flex;
     list-style: none;
-    text-decoration: none;
     max-width: 20%;
     min-width: 10%;
     flex-direction: column;
@@ -130,9 +154,16 @@ main{
     flex-wrap: wrap;
 }
 
-.horizontalList li *{
-    text-align: start;
-    font-family:'montserrat';
+.horizontalList li p{
+    display: flex;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    font-weight: normal;
+    font-style: normal;
+    text-align: center;
+    letter-spacing: normal;
+    height: 200px;
+
 }
 
 .tribute{
@@ -150,10 +181,22 @@ main{
     align-items: center;
     justify-content: center;
     column-gap: 20px;
+    list-style: none;
+}
+
+.tributeList li{
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    align-items: center;
+    justify-items: center;
+    width: 20%;
 }
 
 .tributeList p{
-    width: 20%;
+    font-size: 20px;
+    height: 200px;
+    text-align: center;
 }
 
 
@@ -165,13 +208,19 @@ h1{
     text-align: center;
 }
 
+h2{
+    font-family:'montserrat';
+    font-weight: 500;
+    font-style: italic;
+    font-size: 25px;
+    text-align: center;
+}
+
 p{
     font-family:'montserrat';
     font-weight: normal;
     font-style: normal;
     text-align: start;
-
-
 }
 
 
