--- a/styles/styles.css
+++ b/styles/styles.css
@@ -133,16 +133,12 @@ main{
 
 .horizontalList{
     display: grid;
-    grid-template-columns: repeat(
-        auto-fit, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     width: 100%;
     column-gap: 30px;
     align-content: center;
     align-items: center;
     justify-content: center;
-    margin-left: -35px;
-
-
 }
 
 .horizontalList li{
@@ -164,7 +160,11 @@ main{
     text-align: center;
     letter-spacing: normal;
     height: 200px;
+}
 
+.horizontalContainer h1{
+    margin-top: 3em;
+    margin-bottom: 3em;
 }
 
 .tribute{
@@ -178,12 +178,12 @@ main{
     display: grid;
     grid-template-columns: repeat(
         auto-fit, minmax(150px, 1fr));
+    grid-template-rows: repeat(auto-fit,minmax(300px, 1fr));
     width: 100%;
     column-gap: 30px;
     align-content: center;
     align-items: center;
     justify-content: center;
-    margin-left: -35px;
 }
 
 .tributeList li{
@@ -194,9 +194,14 @@ main{
     justify-items: center;
 }
 
+.tribute h1{
+    margin-top: 3em;
+    margin-bottom: 3em;
+}
+
 .tributeList p{
     font-size: 20px;
-    height: 200px;
+    height: 300px;
     text-align: center;
 }
 
